<resources>
    <string name="app_name">WeChat</string>
    <string name="text_welcome_1">Text your friends and share moments</string>
    <string name="text_welcome_2">End-to-end secured messaging app with Social Elements</string>
    <string name="btn_text_sign_up">Sign Up</string>
    <string name="btn_text_login">Login</string>
    <string name="text_welcome">Welcome !</string>
    <string name="text_login_to_continue">Login to continue</string>
    <string name="text_enter_phone_numb">Enter Your Phone Number</string>
    <string name="label_enter_password">Enter Your Password</string>
    <string name="label_forget_password">Forgot Password?</string>
    <string name="text_verifty_hi">Hi !</string>
    <string name="text_create_a_new_account">Create a new account</string>
    <string name="text_get_otp">Get OTP</string>
    <string name="text_dont_receive">Dont receive the OTP?&#160;</string>
    <string name="text_resend_code">Resend Code</string>
    <string name="lbl_btn_verify">Verify</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_day">Day</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_term_and_service">Agree To Term And Service</string>
    <string name="lbl_moment">Moment</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_me">Me</string>
    <string name="lbl_setting">Setting</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_new_moment">New Moment</string>
    <string name="lbl_create">Create</string>
    <string name="hint_moment_content">What\'s on your mind</string>
    <string name="lbl_online">Online</string>
    <string name="lbl_type_a_message">Type a message...</string>
    <string name="txt_search">Search</string>
    <string name="txt_add_new">Add New</string>
    <string name="txt_contact_name">Than Hteik Aung</string>
    <string name="txt_title_new_gp">Group Name</string>
</resources>