<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">
    <item
        android:id="@+id/menuItemAdd"
        android:icon="@drawable/ic_baseline_post_add_blue_24dp"
        android:title="@string/lbl_moment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemSearch"
        android:icon="@drawable/ic_baseline_search_blue_24dp"
        android:title="@string/lbl_search"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemContactAdd"
        android:icon="@drawable/ic_baseline_person_add_alt_1_blue_24dp"
        android:title="@string/lbl_contacts"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemEdit"
        android:icon="@drawable/ic_baseline_edit_blue_24dp"
        android:title="@string/lbl_edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>