<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">


    <ImageView
        android:id="@+id/ivWelcomeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_screen"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcome1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvWelcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/text_welcome_1"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/text_regular_2xx"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcomeIcon" />

    <TextView
        android:id="@+id/tvWelcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/text_welcome_2"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/btn_text_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnWelcomeLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorSecondaryLight"
        app:strokeWidth="@dimen/stroke_btn" />

    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSecondaryLight"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/btn_text_login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSignUp"
        app:layout_constraintTop_toTopOf="@+id/btnSignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>