<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/ic_baseline_arrow_blue_24dp" />

    <TextView
        android:id="@+id/tvLoginWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/text_welcome"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="@dimen/text_heading_2x"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/tvLoignToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/text_login_to_continue"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="@dimen/text_regular_2x"
        app:layout_constraintStart_toStartOf="@+id/tvLoginWelcome"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginWelcome" />

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="@dimen/width_login_image"
        android:layout_height="@dimen/height_login_image"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLoginPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoignToContinue"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/login_screen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:hint="@string/text_enter_phone_numb"
        app:boxBackgroundColor="@null"
        app:boxStrokeColor="@color/colorSecondaryLight"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoignToContinue"
        app:layout_constraintVertical_bias="0.48000002"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/colorSecondaryLight"
            android:textSize="@dimen/text_regular_2x" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:hint="@string/label_enter_password"
        app:boxBackgroundColor="@null"
        app:boxStrokeColor="@color/colorSecondaryLight"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutLoginPhone"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutLoginPhone"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLoginPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryLight"
            android:textSize="@dimen/text_regular_2x" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/label_forget_password"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLoginPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:backgroundTint="@color/colorSecondary"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/btn_text_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>